--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/FelipeG-Almeida/Projeto-React-AstroDev"
+  "homepage": "https://felipeg-almeida.github.io/Projeto-React-AstroDev/"
 }
